<resources>
    <string name="app_name">KCal</string>
    <string name="login">Login</string>
    <string name="Signin">Sign in</string>
    <string name="loginButton">"Let's go"</string>
    <string name="Forget_Password">Forget Password?</string>
    <string name="Help">Help</string>
    <string name="faqs">Faqs</string>
    <string name="already_have_account">Already have account?</string>
    <string name="gneder">Gender</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="update_profile">Update Profile</string>
    <string name="premuim_text">Premuim</string>
    <string name="contact">Contact</string>
    <string name="premuim_button">Premuim will be available soon</string>
    <string name="phone">+21626994751</string>
    <string name="location">El Haouaria,Nabeul,Tunisia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>