<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/premuim"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/premuim_text"/>
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"/>
    <item
        android:id="@+id/contact"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_contact_support_24"
        android:title="@string/contact"/>
</menu>